@startuml
StatsManagerImpl  ...> CommonStatsImpl : uses
StatsManagerImpl  ...> StatsType : uses
CommonStats ...> StatsType : uses

interface StatsManager {
    + boolean isGameOver()
    + boolean isWin()
    + MapMap<StatsType, Counter> getCommonStats()
}

interface CommonStats {
    + getStat(StatsType)
    + setStat(StatsType)
    ...
}

class StatsManagerImpl implements StatsManager {
    - Commonstats  gameStats
    - Counter gameDays
    ...
}

class CommonStatsImpl implements CommonStats {
    - Map<StatsType, LimitedCounter> stats
    ...
}

enum StatsType {
    - MASS
    - HAPPYNESS
    - DAYS
    ...
}
@enduml

